--- a/main.html
+++ b/main.html
@@ -7,6 +7,22 @@
 </head>
 
 <body>
+	<table>
+		<tr>
+		<th>
+			Roll Number
+		</th>
+			<th>
+			Name
+		</th>
+		</tr>
+		<tr>
+			<td>123456</td><td>Ram</td>
+		</tr>
+		<tr>
+			<td>7891011</td><td>shyam</td>
+		</tr>
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
