--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<table border="1px solid black">
+	<table>
 		<tr>
 		<th>
 			Roll Number
@@ -17,10 +17,10 @@
 		</th>
 		</tr>
 		<tr>
-			<td>123456</td><td>Ram</td>
+			<td>1</td><td>Ram</td>
 		</tr>
 		<tr>
-			<td>7891011</td><td>shyam</td>
+			<td>2</td><td>shyam</td>
 		</tr>
 	</table>
 	<!-- the entire body must be written by student -->
