--- a/main.html
+++ b/main.html
@@ -7,22 +7,31 @@
 </head>
 
 <body>
-	<table>
-		<tr>
-		<th>
-			Roll Number
-		</th>
-			<th>
-			Name
-		</th>
-		</tr>
-		<tr>
-			<td>1</td><td>Ram</td>
-		</tr>
-		<tr>
-			<td>2</td><td>shyam</td>
-		</tr>
-	</table>
+	<section>
+    <h2>Roll numbers and Names</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Roll Number</th>
+          <th>Name</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>John Doe</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Jane Smith</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Michael Johnson</td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
